# CarrotQuant.Data

./: .agentignore  .gitignore  AGENTS.md  README.md  pyproject.toml
.agent/: README_FOR_AI.md  STORAGE.md
.dev/: README_FOR_AI.md
.github/workflows/: tests.yml
.mimocode/command/: git-commit-cn.md
app/config/: settings.py
app/gateway/: api.py  cli.py
app/provider/: baostock_provider.py  base.py  data_cleaner.py  eastmoney_provider.py  em_utils.py  manager.py  provider_manager.py  tdx_provider.py  tdx_utils.py
app/service/: __init__.py  metadata_manager.py  sync_manager.py  task_planner.py
app/storage/: base.py  csv_storage.py  data_merger.py  parquet_storage.py  storage_factory.py  time_standardizer.py  utils.py
app/utils/: logger_utils.py  time_utils.py
config/: config.yaml.sample
demo/: a_stock.py  concept_board_em.py  dragon_tiger_em.py  em_utils.py  industry_board_em.py  institutional_trade_daily_em.py
demo/em/: concept_board_em.py  dragon_tiger_em.py  em_utils.py  industry_board_em.py  institutional_trade_daily_em.py
demo/tdx/: compare_with_baostock.py  explore_tdx.py  mootdx_online_demo.py  test_max_offset.py  test_tdx_online.py  test_tdx_provider.py
scripts/: download_tdx.py  download_test_data.ps1  wizard.py
src/carrotquant_data/: __init__.py  main.py
tests/: conftest.py  test_gateway_locking.py  test_provider_baostock.py  test_service_batch_sync.py  test_service_sync_full.py  test_service_sync_omni.py  test_storage_csv.py  test_storage_parquet.py  test_sync_and_metadata.py  test_sync_defense.py  test_sync_multi_flow.py
(+28 files in other folders)
